# mulambda-experiments

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
mulambda-experiments/: client_scale.py  deploy_scenario.ipynb  dummy-model.yaml.jinja2  evaluate_experiment.ipynb  generate_plots.py  multi_exp_run.py  run_experiment.ipynb  scenarios.py  set_node_delays.ipynb  util.py
mulambda-experiments/.ipynb_checkpoints/: evaluate_experiment-checkpoint.ipynb  run_experiment-checkpoint.ipynb
mulambda-experiments/plots/: plot_gen.py
